security(deps): upgrade all; fix vulnerabilities - upgrade to eslint@9, and adjust to new config - activate no .only lint rule - fix several newly detected lint failures. re-disabled other lint rules. - lock @webref/css to 6.12.x, as newest version fails with if/else syntax - regenerate lock file using npm@10

--- a/package.json
+++ b/package.json
@@ -8,27 +8,27 @@
     "clean": "rimraf -g \"./packages/*/{dist,cjs,esm}\" \"./demos/dist\"",
     "build": "tsc --build",
     "watch": "npm run build -- -w",
-    "lint": "eslint .",
+    "lint": "eslint",
     "pretest": "npm run lint && npm run build",
     "test": "mocha \"./packages/*/dist/test/**/*.spec.js\"",
     "prettify": "npx prettier . --write",
     "start": "node scripts/dev-server.js"
   },
   "devDependencies": {
-    "@ts-tools/node": "^5.0.2",
-    "@types/chai": "^4.3.16",
-    "@types/mocha": "^10.0.6",
+    "@ts-tools/node": "^6.1.0",
+    "@types/chai": "^5.0.1",
+    "@types/mocha": "^10.0.10",
     "@types/node": "22",
-    "@typescript-eslint/eslint-plugin": "^7.13.1",
-    "@typescript-eslint/parser": "^7.13.1",
-    "@webref/css": "^6.12.15",
+    "@webref/css": "~6.12.15",
     "chai": "^4.3.10",
-    "eslint": "^8.56.0",
+    "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
-    "mocha": "^10.4.0",
-    "prettier": "^3.3.2",
-    "rimraf": "^5.0.7",
-    "typescript": "~5.5.2"
+    "eslint-plugin-no-only-tests": "^3.3.0",
+    "mocha": "^11.0.1",
+    "prettier": "^3.4.2",
+    "rimraf": "^6.0.1",
+    "typescript": "~5.7.2",
+    "typescript-eslint": "^8.19.0"
   },
   "engines": {
     "node": ">=22"
